Se agrega paperclip

--- a/implementacion/app/views/informes/_form.html.erb
+++ b/implementacion/app/views/informes/_form.html.erb
@@ -36,6 +36,9 @@
       <%= f.number_field :tipo, :class => "form-control" %>
     </div>
   </div>
+
+  <%= f.file_field :document %>
+
   <div class="form-group">
     <div class="col-sm-offset-2 col-sm-10">
       <%= f.submit :class => "btn btn-primary" %>
