Se implementa caso de uso SEG14 - Registrar informes para condonacion

--- a/implementacion/app/views/informes/show.html.erb
+++ b/implementacion/app/views/informes/show.html.erb
@@ -23,6 +23,7 @@
   <dt>Tipo:</dt>
   <dd><%= @informe.tipo %></dd>
 
-  <%= link_to "Download", @informe.document.url(:original, false), target: '_blank' %>
+  <dt>Archivo de informe</dt>
+  <dd><%= link_to "Descargar", @informe.document.url(:original, false), target: '_blank' %></dd>
 
 </dl>
