--- a/implementacion/app/views/becarios/informes_anuales_condonacion.html.erb
+++ b/implementacion/app/views/becarios/informes_anuales_condonacion.html.erb
@@ -1,14 +1,13 @@
 <h1>Convocatorias</h1>
 <h6>Lista de convocatorias de formación en que participa el becario:</h6>
     
-  
-<div class="form-group">
-  <%= collection_select("select_convocatoria", :conv_seleccionada, Proyecto.where(contrato_id: @becario.contrato_id), :id, :titulo, {}, {:class => 'form-control'}) %>
-</div>
-<div class="form-group">
-  <%= link_to informes_por_convocatoria_becario_path(@becario), :class => 'btn btn-primary' do %>
-    <span class="glyphicon glyphicon-list-alt"></span>
-    Ver informes ingresados
-  <% end %>
-</div>
+<%= form_for :informes, url: informes_por_convocatoria_becario_path(@becario), method: :get, :html => { :class => "form-group" } do |f| %>
 
+  <div class="form-group">
+    <%= select_tag :conv_seleccionada, options_for_select(Proyecto.where(contrato_id: @becario.contrato_id).map { |p| [p.titulo, p.id] } ), :class => "form-control" %>
+  </div>
+  <div class="form-group">
+    <%= f.submit 'Informes', {:class => 'btn btn-primary'} do %>
+    <% end %>
+  </div>
+<% end %>
