--- a/implementacion/app/views/informes/_form.html.erb
+++ b/implementacion/app/views/informes/_form.html.erb
@@ -36,9 +36,12 @@
       <%= f.number_field :tipo, :class => "form-control" %>
     </div>
   </div>
-
-  <%= f.file_field :document %>
-
+  <div class="form-group">
+    <%= f.label :document, :class => "col-sm-2 control-label" %>
+    <div class="col-sm-10">
+      <%= f.file_field :document, :class => "form-control" %>
+    </div>
+  </div>
   <div class="form-group">
     <div class="col-sm-offset-2 col-sm-10">
       <%= f.submit :class => "btn btn-primary" %>
