Configuracion inicial para gemas de autenticación (devise) y autorización (pundit) de usuarios.

--- a/implementacion/app/views/becarios/index.html.erb
+++ b/implementacion/app/views/becarios/index.html.erb
@@ -1,8 +1,10 @@
 <div class="page-header">
-  <%= link_to new_becario_path, :class => 'btn btn-primary' do %>
-    <span class="glyphicon glyphicon-plus"></span>
-    Nuevo Becario
-  <% end %>
+    <% if policy(Becario).new? %>
+      <%= link_to new_becario_path, :class => 'btn btn-primary' do %>
+        <span class="glyphicon glyphicon-plus"></span>
+        Nuevo Becario
+      <% end %>
+    <% end %>
   <h1>Lista de becarios</h1>
 </div>
 
