--- a/implementacion/app/views/layouts/application.html.erb
+++ b/implementacion/app/views/layouts/application.html.erb
@@ -34,6 +34,15 @@
           <li><a href="#about">About</a></li>
           <li><a href="#contact">Contact</a></li>
         </ul>
+        <ul class="nav navbar-nav navbar-right">
+          <% if user_signed_in? %>
+            <li><%= link_to current_user.email, edit_user_registration_path %></li>
+            <li><%= link_to('Cerrar sesión', destroy_user_session_path, :method => :delete) %></li>
+          <% else %>
+            <li><%= link_to "Registrarse", new_user_registration_path %></li>
+            <li><%= link_to "Iniciar Sesión", new_user_session_path %></li>
+          <% end %>
+        </ul>
       </div>
     </div>
   </div>
