Autenticación de usuarios configurada. Se deben ejecutar migraciones antes de correr el servidor

--- a/implementacion/app/views/proyectos/asignar_evaluador.html.erb
+++ b/implementacion/app/views/proyectos/asignar_evaluador.html.erb
@@ -32,10 +32,10 @@
             </div>
           </div>
         </div>
-        |<%= link_to "Ver Registro", :class => 'btn' do %>
+        |<%= link_to "#", :class => 'btn' do %>
           Ver registro
         <% end %>
-        |<%= link_to "Descargar", :class => 'btn' do %>
+        |<%= link_to "#", :class => 'btn' do %>
           Descargar Informe Final
         <% end %>
 
