--- a/implementacion/app/views/proyectos/asignar_evaluador.html.erb
+++ b/implementacion/app/views/proyectos/asignar_evaluador.html.erb
@@ -5,14 +5,14 @@
   <div class="form-group">
     <%= f.label "Convocatorias de formación:", :class => "col-sm-2 control-label" %>
     <div class="col-sm-10">
-      <%= f.select(:conv_seleccionada, Proyecto.where(tipo: 0).collect { |p| [p.nombre_convocatoria, p.num_convocatoria, p.id] }, {:prompt => 'Select. Convocatoria'}, {:class => "form-control chosen-select"}) %>
+      <%= f.select(:conv_seleccionada, Proyecto.where(tipo: 0).map { |p| ["#{p.nombre_convocatoria} #{p.num_convocatoria}", p.id] }, {:prompt => 'Select. Convocatoria'}, {:class => "form-control chosen-select"}) %>
     </div>
   </div>
 
   <div class="form-group">
       <%= f.label "Becarios de la convocatoria con informe final:", :class => "col-sm-2 control-label" %>
-      <div class="col-sm-10">
-        <%= f.collection_select :becario_seleccionado, Becario.all, :id, :nombre, {}, {:class => "form-control chosen-select"} %>
+      <div class="col-sm-10" id="div-select">
+        <%= f.collection_select :becario_seleccionado, [], :id, :nombre, {}, {:class => "form-control"} %>
         <a href="#" class="btn " data-toggle="modal" data-target="#basicModal">Definir Evaluador</a>
         <div class="modal fade" id="basicModal" tabindex="-10" role="dialog" aria-labelledby="basicModal" aria-hidden="true">
             <div class="modal-dialog">
@@ -21,7 +21,7 @@
                     <button type="button" class="close" data-dismiss="modal" aria-hidden="true"></button>
                     <h4 class="modal-title" id="myModalLabel">Definir Evaluador</h4>
                     </div>
-                    <div class="modal-body">
+                    <div class="moda1l-body">
                         <h3> (Corresponde al caso de uso EVA05 - Agregar y seleccionar evaluador)</h3>
                         <h5>La asignación del evaluador se ha realizado exitosamente!</h5>
                     </div>
