--- a/implementacion/app/views/users/show.html.erb
+++ b/implementacion/app/views/users/show.html.erb
@@ -14,6 +14,9 @@
   <dt>Nombre:</dt>
   <dd><%= @user.nombre %></dd>
 
+  <dt>Email:</dt>
+  <dd><%= @user.email %></dd>
+
   <dt>Becario:</dt>
   <dd><%= @user.becario %></dd>
 
