Caso de uso SEG14 terminado. Al caso de uso SEG15 le falta el ultimo paso de la secuencia de eventos

--- a/implementacion/app/assets/stylesheets/application.css
+++ b/implementacion/app/assets/stylesheets/application.css
@@ -13,4 +13,7 @@
  *= require_tree .
  *= require_self
  *= require chosen
+ *= require jquery.ui.core
+ *= require jquery.ui.theme
+ *= require dataTables/jquery.dataTables
  */
