--- a/implementacion/app/views/proyectos/becarios_informe_final.js.erb
+++ b/implementacion/app/views/proyectos/becarios_informe_final.js.erb
@@ -1,2 +1,2 @@
 var $select = $('#proyectos_becario_seleccionado');
-$select.html(' <%= j @becarios.map {|b| "<option value='#{b.id}'>#{b.nombre}</option>"}.join.html_safe %> ');
+$select.html(' <%= j @becarios.map {|b| "<option value='#{b.id}'>#{b.nombre} #{b.apellido1} #{b.apellido2}</option>"}.join.html_safe %> ');
