--- a/implementacion/app/views/proyectos/informes_por_convocatoria.html.erb
+++ b/implementacion/app/views/proyectos/informes_por_convocatoria.html.erb
@@ -1,36 +1,42 @@
 <h1>Informes Ingresados</h1>
 
 <div class="table-responsive">
-  
-    <table class="table table-striped table-bordered table-hover">
-      <thead>
-        <tr>
-              <th>Descripcion</th>
-              <th>Es final</th>
-              <th>Fecha</th>
-              <th>Documento de informe</th>
-              <th>Importar documento</th>
-              <th>Actualizar</th>
-        </tr>
-      </thead>
+  <table class="table table-striped table-bordered table-hover">
+    
+    <thead>
+      <tr>
+        <th>Descripcion</th>
+        <th>Es final</th>
+        <th>Fecha</th>
+        <th>Documento de informe</th>
+        <th>Importar documento</th>
+      </tr>
+    </thead>
 
-      <tbody>
-          <%= content_tag_for(:tr, @informes_convocatoria) do |informe| %>
+    <%= form_for :informes_convocatoria, url: actualizar_informes_proyecto_path(@proyecto), method: :patch do |f| %>
+      <% @informes_convocatoria.each do |informe| %>
+        
+        <tbody>
 
-              <%= form_for(informe, :html => { :class => "form-horizontal" }) do |f| %>  
-                <td><%= f.text_area :descripcion, :class => "form-control" %></td>
-                <td><%= f.check_box :es_final, :class => "form-control" %></td>
-                <td><%= informe.fecha %></td>
-                <td>
-                  <% if !informe.document.blank? %>
-                    <%= link_to "Download", informe.document.url(:original, false), target: '_blank' %>
-                  <% end %>
-                </td>
-                <td><%= f.file_field :document %></td>
-                <td><%= f.submit "Guardar Cambios" %></td>
+          <%= f.fields_for :informes, informe, index: informe.id do |informe_form| %>
+            <td><%= informe_form.text_area :descripcion, :class => "form-control" %></td>
+            <td><%= informe_form.check_box :es_final, :class => "form-control" %></td>
+            <td><%= informe.fecha %></td>
+            <td>
+              <% if !informe.document.blank? %>
+                <%= link_to "Download", informe.document.url(:original, false), target: '_blank' %>
               <% end %>
-
+            </td>
+            <td><%= informe_form.file_field :document %></td> 
           <% end %>
-      </tbody>
-    </table>
+        </tbody>
+
+      <% end %>
+
+  </table>
+      <%= f.submit "Guardar Cambios", {:class => "btn btn-primary"} %>
+    <% end %> 
 </div>
+
+
+
