--- a/implementacion/app/views/proyectos/listar_evaluadores.html.erb
+++ b/implementacion/app/views/proyectos/listar_evaluadores.html.erb
@@ -42,7 +42,7 @@
                     </div>
                     <div class="modal-footer">
                         <button type="button" class="btn btn-default" data-dismiss="modal">Cerrar</button>
-                        <button type="button" class="btn btn-primary">Guardar</button>
+                        <button type="button" class="btn btn-primary" data-dismiss="modal">Guardar</button>
                     </div>
                 </div>
             </div>
