--- a/implementacion/app/views/evaluadors/listar_informes_evaluador.html.erb
+++ b/implementacion/app/views/evaluadors/listar_informes_evaluador.html.erb
@@ -18,7 +18,7 @@
             <td><%= informe.es_final %></td>
             <td><%= informe.fecha %></td>
             <td><%= informe.tipo %></td>
-            <td><%= link_to 'Evaluar', informe %></td>
+            <td><%= link_to 'Evaluar', evaluar_informe_informe_path %></td>
       <% end %>
     </tbody>
   </table>
