Se agrega el modelo propuesta

--- a/implementacion/app/views/evaluadors/show.html.erb
+++ b/implementacion/app/views/evaluadors/show.html.erb
@@ -28,3 +28,9 @@
   <button type="button" class="btn btn-default">Opc2</button>
   <button type="button" class="btn btn-default">Opc3</button>
 </div>
+
+<h3>Seguimiento de Propuestas</h3>
+<div class="btn-group">
+  <%= link_to listar_informes_evaluador_evaluador_path, :class => 'btn btn-default' do %>Evaluaciones Asignadas
+  <% end %>
+</div>
