Se agregan escenarios alternativos para el caso de uso SEG10

--- a/implementacion/app/views/evaluadors/listar_propuestas_asignadas.html.erb
+++ b/implementacion/app/views/evaluadors/listar_propuestas_asignadas.html.erb
@@ -11,6 +11,7 @@
             <th>Numero del Contrato</th>
             <th>Fecha de inicio del Contrato</th>
             <th>Tipo de informe Seguimiento</th>
+            <th>EL TIPO</th>
             <th>Número de Informe</th>
             <th>Fecha de Cargue</th>
             <th>Opción</th>
@@ -21,12 +22,14 @@
       <%= content_tag_for(:tr, @propuestas_asignadas) do |propuesta| %>
             <td><%= propuesta.proyecto.num_convocatoria %></td>
             <td><%= propuesta.proyecto.nombre_convocatoria %></td>
-            <td><%= propuesta.nombre %></td>
+            <td><%= link_to propuesta.nombre, propuesta_path(propuesta) %></td>
             <td><%= propuesta.numero %></td>
             <td><%= propuesta.proyecto.contrato.num_contrato %></td>
             <td><%= propuesta.proyecto.contrato.fecha_inicio %></td>
             <td><%= select(:informe, :tipo, Informe.tipos, {include_blank: true}) %></td>
-            <td><%= propuesta.evaluacion.informe.numero %></td>
+            <td>
+            </td>
+            <td><%= link_to propuesta.evaluacion.informe.numero, propuesta.evaluacion.informe.document.url(:original, false), target: '_blank' %></td>
             <td><%= propuesta.evaluacion.informe.document_updated_at %></td>
             <td>
               <%= link_to 'Consultar Informe', informe_path(propuesta.evaluacion.informe) %><br><br>
