Mostrado correctamente el nomnbre de una propuesta en su vista detalle

--- a/implementacion/app/views/propuestas/show.html.erb
+++ b/implementacion/app/views/propuestas/show.html.erb
@@ -21,6 +21,6 @@
   <dd><%= @propuesta.estado %></dd>
 
   <dt>Proyecto:</dt>
-  <dd><%= @propuesta.proyecto %></dd>
+  <dd><%= @propuesta.proyecto.titulo %></dd>
 
 </dl>
