--- a/implementacion/app/views/propuestas/evaluar_propuesta.html.erb
+++ b/implementacion/app/views/propuestas/evaluar_propuesta.html.erb
@@ -1,3 +1,14 @@
+<% if @propuesta.evaluacion.informe.errors.any? %>
+  <div id="error_explanation">
+    <h2><%= pluralize(@propuesta.evaluacion.errors.count, "error") %> prohibited
+      this article from being saved:</h2>
+    <ul>
+    <% @propuesta.evaluacion.errors.full_messages.each do |msg| %>
+      <li><%= msg %></li>
+    <% end %>
+    </ul>
+  </div>
+<% end %>
 <h2>Evaluar Propuesta</h2>
 
 <dl class="dl-horizontal">
@@ -17,7 +28,7 @@
   <dt>Documento del informe</dt>
   <dd><%= link_to 'Descargar formato', @propuesta.evaluacion.informe.document.url(:original, false), target: '_blank' %>
   </dd>
-  <%= form_for :informes, url: url_for( :controller => :propuestas, :action => :procesar_evaluacion_propuesta ), method: :patch do |f| %>
+  <%= form_for :informes, html: {multipart: true},  url: url_for( :controller => :propuestas, :action => :procesar_evaluacion_propuesta ), method: :patch do |f| %>
     <dt>Cargar:</dt>
     <dd><%= f.file_field :document %></dd><br>
     <div class="form-group">
