--- a/implementacion/app/views/layouts/application.html.erb
+++ b/implementacion/app/views/layouts/application.html.erb
@@ -30,7 +30,8 @@
       </div>
       <div class="collapse navbar-collapse">
         <ul class="nav navbar-nav">
-          <li class="active"><a href="#">Home</a></li>
+          <li class="active"><a href= "/evaluadors" >Evaluadores</a></li>
+          <li class="active"><a href= "/usuario_cols" >Usuarios Colciencias</a></li>
           <li><a href="#about">About</a></li>
           <li><a href="#contact">Contact</a></li>
         </ul>
