--- a/implementacion/app/views/evaluadors/show.html.erb
+++ b/implementacion/app/views/evaluadors/show.html.erb
@@ -7,10 +7,14 @@
     <span class="glyphicon glyphicon-pencil"></span>
     Editar
   <% end %>
-  <h1>Ver Evaluador</h1>
+  <h1>Información del Evaluador</h1>
 </div>
 
 <dl class="dl-horizontal">
+
+  <dt>Nombre:</dt>
+  <dd><%= @evaluador.nombre %></dd>
+
   <dt>Área de Conocimiento:</dt>
   <dd><%= @evaluador.area_conocimiento %></dd>
 
