--- a/implementacion/app/views/layouts/application.html.erb
+++ b/implementacion/app/views/layouts/application.html.erb
@@ -26,12 +26,13 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <%= link_to "SII Comunidad Colciencias - Modulo de Seguimiento", "#", :class => "navbar-brand" %>
+        <%= link_to "SII Comunidad Colciencias - Modulo de Seguimiento", "/", :class => "navbar-brand" %>
       </div>
       <div class="collapse navbar-collapse">
         <ul class="nav navbar-nav">
           <li class="active"><a href= "/evaluadors" >Evaluadores</a></li>
           <li class="active"><a href= "/usuario_cols" >Usuarios Colciencias</a></li>
+          <li class="active"><a href= "/becarios" >Becarios</a></li>
           <li><a href="#about">About</a></li>
           <li><a href="#contact">Contact</a></li>
         </ul>
