--- a/implementacion/app/views/users/nuevo_evaluador.html.erb
+++ b/implementacion/app/views/users/nuevo_evaluador.html.erb
@@ -33,6 +33,27 @@
   </div>
 
   <div class="form-group">
+    <%= f.label :area_conocimiento, :class => "col-sm-2 control-label" %>
+    <div class="col-sm-10">
+      <%= f.text_field :area_conocimiento, :class => "form-control" %>
+    </div>
+  </div>
+
+  <div class="form-group">
+    <%= f.label :fecha_inicial, :class => "col-sm-2 control-label" %>
+    <div class="col-sm-10">
+      <%= f.text_field :fecha_inicial, :class => "form-control" %>
+    </div>
+  </div>  
+
+  <div class="form-group">
+    <%= f.label :fecha_final, :class => "col-sm-2 control-label" %>
+    <div class="col-sm-10">
+      <%= f.text_field :fecha_final, :class => "form-control" %>
+    </div>
+  </div> 
+
+  <div class="form-group">
     <div class="col-sm-offset-2 col-sm-10">
       <%= f.submit :class => "btn btn-primary" %>
     </div>
