--- a/implementacion/app/views/layouts/application.html.erb
+++ b/implementacion/app/views/layouts/application.html.erb
@@ -28,24 +28,27 @@
         </button>
         <%= link_to "SII Comunidad Colciencias - Modulo de Seguimiento", "/", :class => "navbar-brand" %>
       </div>
-      <div class="collapse navbar-collapse">
-        <ul class="nav navbar-nav">
-          <li class="active"><a href= "/evaluadors" >Evaluadores</a></li>
-          <li class="active"><a href= "/usuario_cols" >Usuarios Colciencias</a></li>
-          <li class="active"><a href= "/becarios" >Becarios</a></li>
-          <li><a href="#about">About</a></li>
-          <li><a href="#contact">Contact</a></li>
-        </ul>
-        <ul class="nav navbar-nav navbar-right">
-          <% if user_signed_in? %>
-            <li><%= link_to current_user.email, edit_user_registration_path %></li>
-            <li><%= link_to('Cerrar sesión', destroy_user_session_path, :method => :delete) %></li>
-          <% else %>
-            <li><%= link_to "Registrarse", new_user_registration_path %></li>
-            <li><%= link_to "Iniciar Sesión", new_user_session_path %></li>
+        <div class="collapse navbar-collapse">
+          <ul class="nav navbar-nav">
+          <% if current_user.present? and current_user.role.eql? 'admin' %>
+            <li class="active"><a href= "/evaluadors" >Evaluadores</a></li>
+            <li class="active"><a href= "/usuario_cols" >Usuarios Colciencias</a></li>
+            <li class="active"><a href= "/becarios" >Becarios</a></li>
+            <li><a href="#about">About</a></li>
+            <li><a href="#contact">Contact</a></li>
           <% end %>
-        </ul>
-      </div>
+          </ul>
+          <ul class="nav navbar-nav navbar-right">
+            <% if user_signed_in? %>
+              <li><%= link_to current_user.email, edit_user_registration_path %></li>
+              <li><%= link_to('Cerrar sesión', destroy_user_session_path, :method => :delete) %></li>
+            <% else %>
+              <li><%= link_to "Registrarse", new_user_registration_path %></li>
+              <li><%= link_to "Iniciar Sesión", new_user_session_path %></li>
+            <% end %>
+          </ul>
+        </div>
+      
     </div>
   </div>
   <div class="container">
