--- a/implementacion/app/views/users/_form.html.erb
+++ b/implementacion/app/views/users/_form.html.erb
@@ -19,6 +19,12 @@
     </div>
   </div>
   <div class="form-group">
+    <%= f.label :password, :class => "col-sm-2 control-label" %>
+    <div class="col-sm-10">
+      <%= f.password_field :password, autocomplete: "off", class: "form-control", placeholder: "Leave as blank if you don't want to change password", value: "" %>
+    </div>
+  </div>
+  <div class="form-group">
     <div class="col-sm-offset-2 col-sm-10">
       <%= f.submit :class => "btn btn-primary" %>
     </div>
