--- a/implementacion/app/views/users/nuevo_evaluador.html.erb
+++ b/implementacion/app/views/users/nuevo_evaluador.html.erb
@@ -19,12 +19,38 @@
     </div>
   <% end %>
 
-  <div class="form-group">
-    <%= f.label :nombre, :class => "col-sm-2 control-label" %>
-    <div class="col-sm-10">
-      <%= f.text_field :nombre, :class => "form-control" %>
+
+  <%= f.fields_for :evaluador, Evaluador.new(user: @user) do |fields_evaluador|%>
+    <div class="form-group">
+      <%= fields_evaluador.label :area_conocimiento, :class => "col-sm-2 control-label" %>
+      <div class="col-sm-10">
+        <%= fields_evaluador.text_field :area_conocimiento, :class => "form-control" %>
+      </div>
     </div>
-  </div>
+
+    <div class="form-group">
+      <%= fields_evaluador.label :nombre, :class => "col-sm-2 control-label" %>
+      <div class="col-sm-10">
+        <%= fields_evaluador.text_field :nombre, :class => "form-control" %>
+      </div>
+    </div>
+    
+    <div class="form-group">
+      <%= fields_evaluador.label :fecha_inicial, :class => "col-sm-2 control-label" %>
+      <div class="col-sm-10">
+        <%= fields_evaluador.date_field :fecha_inicial, :class => "form-control" %>
+      </div>
+    </div> 
+
+    <div class="form-group">
+      <%= fields_evaluador.label :fecha_final, :class => "col-sm-2 control-label" %>
+      <div class="col-sm-10">
+        <%= fields_evaluador.date_field :fecha_final, :class => "form-control" %>
+      </div>
+    </div> 
+
+  <% end %>
+
   <div class="form-group">
     <%= f.label :email, :class => "col-sm-2 control-label" %>
     <div class="col-sm-10">
@@ -33,25 +59,18 @@
   </div>
 
   <div class="form-group">
-    <%= f.label :area_conocimiento, :class => "col-sm-2 control-label" %>
+    <%= f.label :password, :class => "col-sm-2 control-label" %>
     <div class="col-sm-10">
-      <%= f.text_field :area_conocimiento, :class => "form-control" %>
+      <%= f.password_field :password, autocomplete: "off", class: "form-control", placeholder: "Escriba la contraseña", value: "" %>
     </div>
   </div>
 
   <div class="form-group">
-    <%= f.label :fecha_inicial, :class => "col-sm-2 control-label" %>
+    <%= f.label :password_confirmation, :class => "col-sm-2 control-label" %>
     <div class="col-sm-10">
-      <%= f.text_field :fecha_inicial, :class => "form-control" %>
+      <%= f.password_field :password_confirmation, autocomplete: "off", class: "form-control", placeholder: "Repita la contraseña", value: "" %>
     </div>
-  </div>  
-
-  <div class="form-group">
-    <%= f.label :fecha_final, :class => "col-sm-2 control-label" %>
-    <div class="col-sm-10">
-      <%= f.text_field :fecha_final, :class => "form-control" %>
-    </div>
-  </div> 
+  </div>
 
   <div class="form-group">
     <div class="col-sm-offset-2 col-sm-10">
