Agregados fixtures con cuenta de usuario para que todos los usuarios puedan iniciar sesion. Cambios menores en algunas vistas

--- a/implementacion/app/views/becarios/show.html.erb
+++ b/implementacion/app/views/becarios/show.html.erb
@@ -7,7 +7,7 @@
     <span class="glyphicon glyphicon-pencil"></span>
     Editar
   <% end %>
-  <h1>Ver becario</h1>
+  <h1>Información del Becario</h1>
 </div>
 
 <dl class="dl-horizontal">
