--- a/implementacion/app/views/usuario_cols/show.html.erb
+++ b/implementacion/app/views/usuario_cols/show.html.erb
@@ -7,7 +7,7 @@
     <span class="glyphicon glyphicon-pencil"></span>
     Editar
   <% end %>
-  <h1>Ver usuario_col</h1>
+  <h1>Información del Usuario Colciencias</h1>
 </div>
 
 <dl class="dl-horizontal">
