--- a/implementacion/app/views/becarios/index.html.erb
+++ b/implementacion/app/views/becarios/index.html.erb
@@ -5,7 +5,7 @@
         Nuevo Becario
       <% end %>
     <% end %>
-  <h1>Lista de becarios</h1>
+  <h1>Lista de Becarios</h1>
 </div>
 
 <div class="table-responsive">
