--- a/implementacion/app/views/evaluadors/index.html.erb
+++ b/implementacion/app/views/evaluadors/index.html.erb
@@ -1,5 +1,5 @@
 <div class="page-header">
-  <h1>Lista de evaluadores</h1>
+  <h1>Lista de Evaluadores</h1>
 </div>
 
 <div class="table-responsive">
